// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CdrFulfillmentTileIcon > has defaults 1`] = `
<span
  class="cdr-fulfillment-tile-icon cdr-fulfillment-tile-icon--default"
>
  <!-- @slot Where all default content should be placed. -->
  
  X
  
</span>
`;

exports[`CdrFulfillmentTileIcon > has success type 1`] = `
<span
  class="cdr-fulfillment-tile-icon cdr-fulfillment-tile-icon--success"
>
  <!-- @slot Where all default content should be placed. -->
  
  X
  
</span>
`;
